--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,7 +1,9 @@
 .container {
-    max-width: 36rem;
+    max-width: 50rem;
     padding: 0 1rem;
-    margin: 3rem auto 6rem;
+    margin: 0rem auto 0rem;
+    height: 100%;
+    padding: 1rem;
 }
 
 .header {
