--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,8 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: rgb(10, 77, 153) !important;
+  text-decoration: none!important;
 }
 
 * {
@@ -16,5 +16,9 @@ a {
 }
 
 h1 {
+  color: peru;
+}
+
+h2 {
   color: peru;
 }
