--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
 
 a {
   color: rgb(10, 77, 153) !important;
-  text-decoration: none!important;
+  text-decoration: none !important;
 }
 
 * {
@@ -23,7 +23,17 @@ h2 {
   color: peru;
 }
 
-.title{
+.title {
   color: red !important;
   font-size: 14px !important;
+}
+
+.bg-navbar {
+  background-color: rgb(154, 198, 255);
+}
+
+.bg-abajo {
+  background-color: rgb(204, 226, 255);
+  width: 100%;
+  padding: 2rem;
 }
