--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background-color: rgb(17, 21, 44);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -16,23 +17,40 @@ a {
 }
 
 h1 {
-  color: rgb(0, 23, 128);
+  color: rgb(28, 121, 241);
+}
+
+.bg-card {
+  background-color: rgb(35, 45, 77);
 }
 
 h2 {
-  color: rgb(0, 66, 128);
+  color: rgb(28, 121, 241);
 }
 
 .bg-navbar {
-  background-color: rgb(53, 53, 53);
+  background-color: rgb(0, 0, 0);
 }
 
 .bg-abajo {
-  background-color: rgba(73, 69, 69, 0.281);
+  background-color: rgba(19, 3, 3, 0.281);
   width: 100%;
   padding: 2rem;
 }
 
 .a {
   color: '#D5DCE7'
+}
+
+
+
+.search {
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+.menu-fixed {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
 }
