btn shadow removed and card size, description in about section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,3 +88,7 @@ h2 {
   /* change div to reference your elements you put in <Masonry> */
   margin-bottom: 5px;
 }
+
+.percent98 {
+  width: 49.8%;
+}
