--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: rgb(17, 21, 44);
+  background-color: rgb(255, 255, 255);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-  color: #D5DCE7 !important;
+  color: #d5dce7 !important;
   text-decoration: none !important;
 }
 
@@ -21,7 +21,7 @@ h1 {
 }
 
 .bg-card {
-  background-color: rgb(35, 45, 77);
+  background-color: rgb(255, 255, 255);
   box-shadow: none;
   margin: -0.2rem;
 }
@@ -35,20 +35,27 @@ h2 {
 }
 
 .bg-abajo {
-  background-color: rgba(19, 3, 3, 0.281);
+  background: rgb(1, 6, 54);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 6, 54, 1) 0%,
+    rgba(9, 9, 121, 1) 20%,
+    rgba(6, 80, 168, 1) 51%,
+    rgba(0, 212, 255, 1) 100%
+  );
   width: 100%;
-  padding: 2rem;
+  padding-left: 1.5rem;
+  border-radius: 0rem 0rem 15rem 1rem;
 }
 
 .a {
-  color: '#D5DCE7'
+  color: "#D5DCE7";
 }
 
-
-
 .search {
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   padding: 0.5rem;
+  border-width: 0.1rem;
 }
 
 .menu-fixed {
@@ -57,15 +64,13 @@ h2 {
   top: 0;
 }
 
-
 @media (max-width: 600px) {
   .bg-card {
-    background-color: rgb(35, 45, 77);
+    background-color: rgb(255, 255, 255);
     box-shadow: none;
     margin: -0.5rem;
   }
 }
-
 
 .my-masonry-grid {
   display: -webkit-box;
@@ -84,11 +89,47 @@ h2 {
 }
 
 /* Style your items */
-.my-masonry-grid_column>div {
+.my-masonry-grid_column > div {
   /* change div to reference your elements you put in <Masonry> */
   margin-bottom: 5px;
 }
 
 .percent98 {
   width: 49.8%;
+}
+
+.Title {
+  font-size: 12px !important;
+}
+
+.Secondary {
+  font-size: 12px !important;
+  line-height: normal;
+}
+
+.created-at-css {
+  margin-left: auto;
+  font-size: 11px !important;
+  width: 100%;
+  text-align: right;
+}
+.css-badges {
+  margin-right: auto;
+  font-size: 11px !important;
+  width: 100%;
+}
+.fw-lighter {
+  color: white;
+}
+.badge {
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  text-align: center;
+  padding: 0.2rem;
+  margin-right: 0.1rem;
+}
+.btn {
+  border-radius: 0.5rem !important;
+  margin: 0%;
 }
